...

                    else -> {
                        val payload = account.accountPayload
                        val countryDetails = uiState.countryDetails

                        AccountDetailFieldRow(
                            label = "paymentAccounts.country".i18n(),
                            value = payload.country.name,
                        )
                        AccountDetailFieldRow(
                            label = "paymentAccounts.currency".i18n(),
                            value = payload.currency.toDisplayString(),
                        )
                        payload.holderName?.let { holderName ->
                            AccountDetailFieldRow(
                                label = "paymentAccounts.holderName".i18n(),
                                value = holderName,
                            )
                        }
                        payload.holderId?.let { holderId ->
                            AccountDetailFieldRow(
                                label = countryDetails?.holderIdDescription.orFallback("paymentAccounts.bank.holderId"),
                                value = holderId,
                            )
                        }
                        payload.bankName?.let { bankName ->
                            AccountDetailFieldRow(
                                label = "paymentAccounts.bank.bankName".i18n(),
                                value = bankName,
                            )
                        }
                        payload.bankId?.let { bankId ->
                            AccountDetailFieldRow(
                                label = countryDetails?.bankIdDescription.orFallback("paymentAccounts.bank.bankId"),
...
        accountName = "Same Bank Main",
        accountPayload =
            SameBankAccountPayload(
                chargebackRisk = FiatPaymentMethodChargebackRisk.MODERATE,
                paymentMethodName = "Same Bank",
                currency = FiatCurrency("USD", "US Dollar"),
                country = Country("US", "United States"),
                holderName = "Alice Doe",
                holderId = "1234",
                bankName = "Bisq Bank",
                bankId = "BANKUS33",
                branchId = "001",
                accountNr = "123456789",
                bankAccountType = BankAccountType.CHECKING,
                nationalAccountId = "NAT-123",
            ),
        creationDate = "Apr 3, 2026",
        tradeLimitInfo = "5000.00 USD",
        tradeDuration = "5 days",
    )

...
