...
            "action.react" to "Reakt",
            "temporal.day.*" to "{0} dey",
            "temporal.at" to "for",
            "component.standardTable.csv.plainValue" to "{0} (plin valyu)",
            "offer.seller" to "Sela",
            "temporal.date" to "Dei",
            "action.iUnderstand" to "I sabi",
            "component.priceInput.prompt" to "Enter pris",
            "confirmation.ok" to "OK",
            "action.dontShowAgain" to "No show again",
            "action.cancel" to "Kansel",
            "offer.amount" to "Amont",
            "action.edit" to "Editabl",
...
            "mobile.bisqService.title" to "Bisq Service Is Running",
            "mobile.trustedNodeSetup.wsURL.invalid" to "Invalid WebSocket URL. Must be ws:// or wss:// followed by a domain/IP and port",
            "mobile.onboarding.line2" to "All the awesomeness of Bisq desktop now in your mobile. Android only. (TODO: Show apt image)",
            "mobile.base.swipeBackToExit" to "Press/Swipe back again to exit",
            "mobile.settings.general" to "General",
            "mobile.bisqEasy.tradeWizard.price.tradePrice.type.percentage" to "Percentage",
            "mobile.components.dropdown.searchPlaceholder" to "Search...",
            "mobile.bisqEasy.takeOffer.paymentMethods.headline.fiat" to "Which payment method do you want to use?",
            "mobile.dashboard.bulletPoint2" to "Connect to Trusted Nodes: Start trading with confidence by connecting to a trusted Bisq node hosted by someone you trust.",
            "mobile.dashboard.bulletPoint3" to "Remote Management for Experts: Manage your trades on the go by connecting securely to your own desktop-based Bisq node, no matter where you are.",
            "mobile.dashboard.bulletPoint1" to "Experience Bisq with the guidance of a trusted friend or connect remotely to your own full node.",
            "mobile.openTradeNotifications.btcSentReceived.message" to "Bitcoin confirmation from {0} has been received",
            "mobile.settings.trade.maxTradePriceDeviation.validation.cannotBeEmpty" to "Value cannot be empty",
...
